--- a/zhaira/myproject/posts/templates/posts/post_list.html
+++ b/zhaira/myproject/posts/templates/posts/post_list.html
@@ -1,10 +1,9 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-     About
+     Home 
 {% endblock %}
 
 {% block content %}
-<h1>About</h1>
-        <p>Check out my <a href="/">Home</a> page.</p>
+<h1>Post List</h1>
 {% endblock %} 
