--- a/zhaira/myproject/posts/templates/posts/post_list.html
+++ b/zhaira/myproject/posts/templates/posts/post_list.html
@@ -1,9 +1,18 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-     Home 
+    Posts
 {% endblock %}
 
 {% block content %}
-<h1>Post List</h1>
-{% endblock %} 
+    <section>
+        <h1 class="post-list-title">Post List</h1> <!-- Title of the post list -->
+        {% for post in posts %}
+            <article class="post">
+                <h2 class="post-title">{{ post.title }}</h2> <!-- Title of each post -->
+                <p class="post-date">{{ post.date }}</p> <!-- Date of each post -->
+                <p class="post-body">{{ post.body }}</p> <!-- Body of each post -->
+            </article>
+        {% endfor %}
+    </section>
+{% endblock %}
