--- a/zhaira/myproject/templates/layout.html
+++ b/zhaira/myproject/templates/layout.html
@@ -11,17 +11,18 @@
     </title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="{% static 'js/main.js' %}" defer></script>
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <nav>
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/post">Post</a>
+        <a href="/"><i class="fas fa-home"></i> Home</a>
+        <a href="/about"><i class="fas fa-info-circle"></i> About</a>
+        <a href="/post"><i class="fas fa-file-alt"></i> Post</a>
     </nav>
     <main>
         {% block content %}
         {% endblock %}
     </main>
-    
 </body>
 </html>
